Implement basic playback functionality
Play, pause, next, prev, should playback any ffmpeg supported file. Barebones test Ui